--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,8 @@
-/* Thomsoon.com - OnePage CSS Responsive theme
--- version 1.0
--- Copyright (c) 2014 Thomsoon.com
--- licensed under the MIT
---
--- http://www.thomsoon.com/
---
-*/
+
 
 /* Font Google - strong reaload time */
 @import url(http://fonts.googleapis.com/css?family=Lato:400,300,100,700,900&subset=latin,latin-ext);
 
-
-/*
- * Theme Name: Onepage
- * Author: Thomsoon
- * Created: 14/11/2014
- */
-
-
-.preloader{
-  position:fixed;
-  width:100%;
-  height:100%;
-  background:white;
-  z-index:99999;
-}
- 
-.preloader .item{
-  position:absolute;
-  width:100px;
-  height:100px;
-  left:50%;
-  top:50%;
-  margin-left:-50px;
-  margin-top:-50px;
-} 
 
 
 html, body{
@@ -342,7 +310,6 @@ h1 span{
 /* About us */
 
 .about-us{
-  position:relative;
   display: flex;
   width:100%;
   background-size: cover;
@@ -361,14 +328,16 @@ h1 span{
 }
 
 .about-us .gambar img {
-  width: 52%;
+  width: 57%;
   height: 100%;
 
 }
 .about-us .content{
   position:relative;
   width:50%;
-  margin-right: 6% ;
+  align-items: center;
+  text-align: center;
+  margin-right: 17% ;
   overflow: hidden;
 }
 
@@ -382,6 +351,71 @@ h1 span{
   text-transform:uppercase;
   line-height:1.2;
 
+}
+
+.btn {
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 45px;
+  max-width: 160px;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
+}
+.btn:hover {
+  text-decoration: none;
+}
+
+/*btn_background*/
+.effect04 {
+  --uismLinkDisplay: var(--smLinkDisplay, inline-flex);
+  display: var(--uismLinkDisplay);
+  color: #94949c;
+  outline: solid  2px #94949c;
+  position: relative;
+  transition-duration: 0.4s;
+  overflow: hidden;
+}
+
+.effect04::before,
+.effect04 span{
+    margin: 0 auto;
+	transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+	transition-duration: 0.4s;
+}
+
+
+.effect04:hover{
+
+  background-color: #94949c;
+}
+
+
+.effect04:hover span{
+  -webkit-transform: translateY(-400%) scale(-0.1,20);
+          transform: translateY(-400%) scale(-0.1,20);
+}
+
+
+.effect04::before{
+  content: attr(data-sm-link-text);
+	color: #FFF;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  -webkit-transform: translateY(500%) scale(-0.1,20);
+          transform: translateY(500%) scale(-0.1,20);
+}
+
+
+.effect04:hover::before{
+  letter-spacing: 0.05em;
+  -webkit-transform: translateY(0) scale(1,1);
+          transform: translateY(0) scale(1,1);
 }
 
 .about-us hr{
@@ -437,91 +471,6 @@ h1 span{
   height:350px;
 }
 
-.about-us .column-one .circle-one{
-  height: 100px;
-  position:relative;
-  margin:0 auto;
-  border:2px solid #f0f0f0;
-  background: url(../img/icons/camera.png) white no-repeat center center;
-  -moz-border-radius:100px;
-  -webkit-border-radius:100px;
-  border-radius: 100px;
-  width: 100px;
-  cursor:pointer;
-    -webkit-transition: all 0.2s ease-in;
-	-moz-transition: all 0.2s ease-in;
-	-ms-transition: all 0.2s ease-in;
-	-o-transition: all 0.2s ease-in;
-	transition: all 0.2s ease-in;
-}
-
-.about-us .column-one .circle-one:hover{
-  border:2px solid #ada074;
-
-}
-
-.about-us .column-two{
-  margin-top:40px;
-  width:300px;
-  float:left;
-  margin-bottom:70px;
-  height:350px;
-}
-
-.about-us .column-two .circle-two{
-  height: 100px;
-  position:relative;
-  margin:0 auto;
-  border:2px solid #f0f0f0;
-  background: url(../img/icons/video.png) white no-repeat center center;
-  -moz-border-radius:100px;
-  -webkit-border-radius:100px;
-  border-radius: 100px;
-  width: 100px;
-    cursor:pointer;
-    -webkit-transition: all 0.2s ease-in;
-	-moz-transition: all 0.2s ease-in;
-	-ms-transition: all 0.2s ease-in;
-	-o-transition: all 0.2s ease-in;
-	transition: all 0.2s ease-in;
-}
-
-.about-us .column-two .circle-two:hover{
-  border:2px solid #ada074;
-}
-
-
-.about-us .column-three{ 
-  margin-top:40px;
-  width:300px;
-  float:left;
-  margin-bottom:70px;
-  height:350px;
-}
-
-.about-us .column-three .circle-three{ 
-  height: 100px;
-  position:relative;
-  margin:0 auto;
-  border:2px solid #f0f0f0;
-  background: url(../img/icons/video-editor.png) white no-repeat center center;
-  -moz-border-radius:100px;
-  -webkit-border-radius:100px;
-  border-radius: 100px;
-  width: 100px;
-  cursor:pointer;
-  -webkit-transition: all 0.2s ease-in;
-	-moz-transition: all 0.2s ease-in;
-	-ms-transition: all 0.2s ease-in;
-	-o-transition: all 0.2s ease-in;
-	transition: all 0.2s ease-in;
-}
-
-.about-us .column-three .circle-three:hover{ 
-  border:2px solid #ada074;
-}*/
-
-
 
 /* Portfolio */
 
@@ -529,7 +478,7 @@ h1 span{
 .portfolio{
   position:relative;
   width:100%;
-  background:#f3f3f3;
+  background:#ffffff;
   z-index:10;
 
 }
@@ -1011,25 +960,21 @@ input.submit{
 	transition: all 0.6s ease-in;
 }
 
+.fa.fa-whatsapp{
+  font-size: 50px;
+}
+
 /* Footer */
 
 
 .footer{
-  position:fixed;
+  position:absolute;
   bottom:0;
+  border: #000 1px solid;
   width:100%;
   background:#3c3c3c;
 }
 
-.footer .logo{
-
-  position:relative;
-  width:58px;
-  height:58px;
-  margin: 0 auto;
-  padding-top:50px;
-
-}
 
 .footer .menu-footer{
   width:80%;
