--- a/css/style-responsive.css
+++ b/css/style-responsive.css
@@ -1,11 +1,3 @@
-/* Thomsoon.com - OnePage CSS Responsive
--- version 1.0
--- Copyright (c) 2014 Thomsoon.com
--- licensed under the MIT
---
--- http://www.thomsoon.com/
---
-*/
 
 
 /* iPad (portrait) */
@@ -20,11 +12,11 @@
 }
 
 .start-page .content {
-  width:350px;
-  height:100%;
-  margin-left: 28px;
+    width: 100% !important;
+    height: 100%;
+    margin-left: 0 !important;
+    position: absolute
 }
-
 .start-page, .start-page .opacity{
   height:100%;
   width:100%;
@@ -41,13 +33,13 @@ h1 {
 }
 
 .about-us{
+  flex-direction: row;
   flex-wrap: wrap;
-  flex-direction: column;
-  border: 1px solid;
+
 }
 
 .about-us .gambar {
-  border: 1px solid;
+
   width: 100%;
 }
 
@@ -56,8 +48,10 @@ h1 {
 }
 
 .about-us .content{
-  width:100%;
-  border: 1px solid;
+    width: 100%;
+    border: 1px solid;
+    position: fixed;
+
 }
 
 .about-us hr,.portfolio .portfolio-margin hr, .contact hr {
@@ -68,6 +62,26 @@ h1 {
   width:300px;
   margin-bottom:20px;
 }
+
+.grid {
+  margin-top: 2rem;
+  width: 100%;
+  position: relative;
+  margin-bottom: 70px;
+  overflow: hidden;
+}
+
+.portfolio .portfolio-margin h1 {
+  font-size: 34px;
+  color: black;
+  text-align: center;
+  margin-top: 57rem;
+  letter-spacing: 6px;
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.2;
+}
+
 
  .about-us .content .column-three{
   width:300px;
@@ -173,6 +187,12 @@ textarea{
 
 h1 {
   font-size:36px;
+}
+
+.about-us {
+  flex-wrap: wrap;
+  flex-direction: column;
+
 }
 
 .about-us h1 {
