--- a/css/style-responsive.css
+++ b/css/style-responsive.css
@@ -12,10 +12,10 @@
 }
 
 .start-page .content {
-    width: 100% !important;
-    height: 100%;
-    margin-left: 0 !important;
-    position: absolute
+  width: 100% !important;
+  height: 100%;
+  margin-left: 0 !important;
+  position: relative;
 }
 .start-page, .start-page .opacity{
   height:100%;
@@ -39,29 +39,45 @@ h1 {
 }
 
 .about-us .gambar {
-
   width: 100%;
+}
+
+.about-us .gambar img {
+  width: 68%;
+  height: 90%;
+}
+
+.about-us .content {
+  width: 100%;
+  border: 1px solid;
+  /* position: fixed; */
+  margin-right: 0;
+  /* padding-right: 10px; */
+  /* padding-right: 10px;*/
 }
 
 .about-us h1 {
   margin-top:500px;
+  /* margin-top: 500px; */
+  margin-top: 11px;
+  font-size: 20px;
 }
 
-.about-us .content{
-    width: 100%;
-    border: 1px solid;
-    position: fixed;
+.about-us p.title {
+  color: #a4a4a4;
+  margin: 40px auto;
+  /* width: 600px; */
+  line-height: 25px;
+  letter-spacing: 0;
+  /* font-size: 6px; */
+  font-weight: 300;
+  text-align: justify;
+  margin-top: 91px;
+  /* padding-right: 30px; */
+  /* padding-left: 30px; */
+  left: 0 !important;
+  top: 0 !important;
 
-}
-
-.about-us hr,.portfolio .portfolio-margin hr, .contact hr {
-  width:106px;
-}
-
-.about-us .column-one, .about-us .column-two{
-  width:300px;
-  margin-bottom:20px;
-}
 
 .grid {
   margin-top: 2rem;
@@ -148,9 +164,6 @@ textarea{
 .footer{
   position:relative;
 }
-
-}
-
 
 
 /* iPad (portrait) */
