--- a/css/style-responsive.css
+++ b/css/style-responsive.css
@@ -78,6 +78,18 @@ h1 {
   left: 0 !important;
   top: 0 !important;
 
+/*.cards {
+    display: flex;
+    /* margin-top: 25rem; */
+    flex-direction: column;
+    width: 100%;
+    z-index: 10;
+    height: 100vh;
+    justify-content: center;
+    /* background: url(../img/background/partners.jpg) 0px 0px fixed; */
+    background-size: cover;
+    margin-top: 27rem;
+}
 
 .grid {
   margin-top: 2rem;
@@ -85,6 +97,14 @@ h1 {
   position: relative;
   margin-bottom: 70px;
   overflow: hidden;
+}
+
+.portfolio .portfolio-margin {
+  position: relative;
+  width: 248px;
+  overflow: hidden;
+  margin: 0 auto;
+  margin-top: 92rem;
 }
 
 .portfolio .portfolio-margin h1 {
@@ -288,16 +308,6 @@ textarea{
 }
 
 
-}
-
-
-
-
-
-
-
-
-
 
 
 /* iPad (portrait) */
@@ -387,4 +397,3 @@ textarea{
 }
 
 
-}
