--- a/css/style-responsive.css
+++ b/css/style-responsive.css
@@ -1,3 +1,8 @@
+/* 
+  Nama : Dennie Fuzi Alviyanies
+  Kelas : IF10
+  NIM   : 10120918
+*/
 
 
 /* iPad (portrait) */
@@ -395,5 +400,3 @@ textarea{
   width:450px;
   padding-left:0;
 }
-
-
