--- a/css/style.css
+++ b/css/style.css
@@ -483,7 +483,26 @@ h1 span{
   margin:0 auto;
 }
 
+.portfolio .portfolio-margin h1{
+  font-size:34px;
+  color:black;
+  text-align:center;
+  margin-top:120px;
+  letter-spacing:6px;
+  font-weight:bold;
+  text-transform:uppercase;
+  line-height:1.2;
+}
 
+
+.portfolio .portfolio-margin hr{
+  color: black;
+  margin-top:30px;
+  background-color: black;
+  height: 1px;
+  width:106px;
+  border:0;
+}
 /* Portfolio grid */
 
 .grid{
